Name:                   plow-email-server
Version:                0.1.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Email server for sending email   
Description:            Email Server for sending email

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plow.Email.Server
  Other-Modules:        Plow.Email.Lens
  Build-Depends:        base >= 4 && < 5
                      , alarm-log-adapter >= 0.2.1	
                      , lens >= 4.4 && < 4.5
                      , alarm-state-types >= 0.1.0
                      , mime-mail >= 0.4.5.2
                      , yesod    >= 1.2.4 && < 1.4
                      , HaskellNet >= 0.4
                      , HaskellNet-SSL >= 0.2.5.1
                      , bytestring >= 0.10.4.0
                      , shakespeare  >= 2.0.1.1
                      , shakespeare-templates  >= 0.0.1
                      , aeson
                      , text 
                      , containers
                      , lens-aeson
                      , alarm-state-types
                      , time
                      , plow-extras-lens >= 0.1.1
                      , plow-extras-time >= 0.1.1
  



Executable plowemail
   main-is:            Main.hs
   HS-Source-Dirs:     src


   build-depends:        base
                       , lens
                       , alarm-log-adapter 
                       , yesod
                       , mime-mail 
                       , HaskellNet
                       , HaskellNet-SSL
                       , validation
                       , bytestring
                       , shakespeare     
                       , shakespeare-templates 
                       , aeson
                       , text
                       , containers
                       , lens-aeson
                       , alarm-state-types
                       , time
                       , plow-extras-lens 
                       , plow-extras-time
               


   default-language:  Haskell2010
   ghc-options:       -threaded -O2 -rtsopts -Wall 



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , mime-mail 
                      , HaskellNet
                      , HaskellNet-SSL
                      , validation
                      , bytestring
                      , alarm-state-types 
                      , yesod 
                      , shakespeare
                      , shakespeare-templates
                      , alarm-log-types 
                      , aeson
                      , text
                      , plow-extras-lens 
                      , plow-extras-time
                      , time
                      , lens
                      , lens-aeson
                      , alarm-log-adapter
                      , containers
                      , alarm-db-keys
                      , directed-keys

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/plow-email.git
