Name:                   plow-email-server
Version:                0.1.1
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Email server for sending email   
Description:            Email Server for sending email

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plow.Email.Server
  Other-Modules:        Plow.Email.Lens
                        Plow.Email.Types
                        Plow.Email.MailTemplate
                        Plow.Email.MailClient
                        Plow.Email.Handler
                        Plow.Email.Config
  Build-Depends:        base                    >= 4 && < 5
                      , lens                    >= 4.4 && < 4.5
                      , mime-mail               >= 0.4.6.2
                      , yesod-core              >= 1.4
                      , HaskellNet              >= 0.4.1
                      , HaskellNet-SSL          >= 0.2.5.1
                      , bytestring              >= 0.10.4.0
                      , shakespeare             >= 2.0.1.1
                      , shakespeare-templates   >= 0.0.1
                      , alarm-log-adapter       >= 0.2.1
                      , alarm-state-types       >= 0.2.1
                      , node-client-configs     >= 0.1.3
                      , plow-extras-lens        >= 0.1.1
                      , plow-extras-time        >= 0.1.1
                      , lens-aeson              
                      , system-filepath
                      , aeson
                      , text 
                      , containers
                      , time
                      , yaml
                      , wreq
                      , warp
                      , cmdargs
                                  



Executable plowemail
   main-is:            Main.hs
   HS-Source-Dirs:     src


   build-depends:        base
                       , lens                   
                       , mime-mail              
                       , yesod-core             
                       , HaskellNet              
                       , HaskellNet-SSL        
                       , bytestring             
                       , shakespeare            
                       , shakespeare-templates  
                       , alarm-log-adapter      
                       , alarm-state-types      
                       , node-client-configs   
                       , plow-extras-lens       
                       , plow-extras-time       
                       , lens-aeson
                       , system-filepath
                       , aeson
                       , text 
                       , containers
                       , time
                       , yaml
                       , wreq
                       , warp
                       , cmdargs
                                  


   default-language:  Haskell2010
   ghc-options:       -threaded -O2 -rtsopts -Wall 



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , yesod-test
                      , lens                   
                      , mime-mail              
                      , yesod-core             
                      , HaskellNet              
                      , HaskellNet-SSL        
                      , bytestring             
                      , shakespeare            
                      , shakespeare-templates  
                      , alarm-log-adapter      
                      , alarm-state-types      
                      , node-client-configs   
                      , alarm-db-keys
                      , directed-keys
                      , plow-extras-lens       
                      , plow-extras-time       
                      , lens-aeson
                      , system-filepath
                      , aeson
                      , text 
                      , containers
                      , time
                      , yaml
                      , wreq
                      , warp
                      , cmdargs
                                  

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/plow-email.git
